--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pg": "7.4.0",
     "sequelize": "^4.37.5",
     "serve-favicon": "~2.4.5",
+    "sqlite": "^2.9.2",
     "supervisor": "^0.12.0"
   },
   "devDependencies": {
