--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "heroku local:start",
     "super": "supervisor ./bin/www",
     "start_old": "node ./bin/www"
   },
@@ -26,10 +26,10 @@
     "pg": "7.4.0",
     "sequelize": "^4.37.5",
     "serve-favicon": "~2.4.5",
-    "sqlite": "^2.9.2",
     "supervisor": "^0.12.0"
   },
   "devDependencies": {
     "sqlite3": "^3.1.13"
   }
+}
 }
