--- a/package.json
+++ b/package.json
@@ -3,10 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "heroku local:start",
     "super": "supervisor ./bin/www",
     "start_old": "node ./bin/www",
-    "start_heroku": "heroku locak:start"
+    "migrate_local": "sequelize db:migrate --url sqlite://$(pwd)/quiz.sqlite",
+    "seed_local": "sequelize db:seed:all --url sqlite://$(pwd)/quiz.sqlite",
+    "open_heroku": "heroku open",
+    "migrate_heroku": "heroku run ./node_modules/.bin/sequelize db:migrate --url \\$DATABASE_URL",
+    "seed_heroku": "heroku run ./node_modules/.bin/sequelize db:seed:all --url \\$DATABASE_URL",
+    "reset_heroku": "heroku pg:reset DATABASE",
+    "mon_heroku": "heroku maintenance:on",
+    "moff_heroku": "heroku maintenance:off"
   },
   "engines": {
     "node": "8.9.1",
@@ -14,30 +21,23 @@
   },
   "dependencies": {
     "body-parser": "~1.18.2",
-    "connect-session-sequelize": "^5.2.1",
+    "connect-session-sequelize": "^5.0.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
     "express-flash": "0.0.2",
     "express-partials": "^0.3.0",
-    "express-sequelize": "0.0.4",
     "express-session": "^1.15.6",
-    "findall": "0.0.1-security",
-    "install": "^0.11.0",
-    "latest-version": "^3.1.0",
     "method-override": "^2.3.10",
     "morgan": "~1.9.0",
-    "node-gyp": "^3.6.2",
-    "node-pre-gyp": "^0.10.0",
     "pg": "7.4.0",
-    "rebuild": "^0.1.2",
-    "sequelize": "^4.37.8",
-    "sequelize-express-findbyid": "^1.0.7",
+    "sequelize": "^4.37.5",
+    "sequelize-cli": "^4.0.0",
     "serve-favicon": "~2.4.5",
     "supervisor": "^0.12.0"
   },
   "devDependencies": {
-    "sqlite3": "https://github.com/mapbox/node-sqlite3/tarball/master"
+    "sqlite3": "^3.1.13"
   }
 }
